--- a/css/modal_dialog.css
+++ b/css/modal_dialog.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 .modal-dialog-overlay {
   width: 100%;
@@ -11,7 +10,7 @@ body {
   z-index: 11062008;
   overflow-x: hidden;
   overflow-y: auto;
-}
+  display: none; }
 
 .dialog-content-wrapper {
   top: 0;
@@ -20,19 +19,16 @@ body {
   left: 0;
   margin: auto auto;
   position: absolute;
-  background-color: #FFF;
-}
+  background-color: #FFF; }
 
 .metro-dialog {
   overflow: hidden;
   width: 100%;
-  max-height: 400px;
-}
+  max-height: 400px; }
 
 .facebook-dialog {
   min-height: 100%;
   height: 200%;
-  width: 400px;
-}
+  width: 400px; }
 
 /*# sourceMappingURL=modal_dialog.css.map */
